# bworks-smart-contracts

./: .gitignore  README.md  plutus-bworks.cabal
app/: plutus-bworks.hs
dist-newstyle/cache/: compiler  config
generated-plutus-scripts/: bworksV2.plutus  bworksV2WithDeadline.plutus
generated-plutus-scripts/bWorksV1/: simpleToTestScript.plutus  unlockByBWorksWithDeadLineScript.plutus  unlockByEmpWithoutDeadLineScript.plutus
plutus-addresses/: bWorksV2WithDeadlineMainnet.addr  bworksV2Mainnet.addr
shell-scripts/: addressBalance.sh  balanceMainnet.sh  burn-token-testnet.zsh  createWallet.sh  functionsMainnet.sh  generatePlutusAddress.sh  generatePlutusAddressMainnet.sh  getFromScriptV2.sh  getFromScriptV2AutoSelectUtxo.sh  getFromScriptV2AutoSelectUtxoMainnet.sh  getTAda.sh  lockAdaToScript.sh  mint-token-testnet.zsh  payToScriptV2.sh  payToScriptV2AutoSeletUtxo.sh  payToScriptV2AutoSeletUtxoMainnet.sh  secretMainnet.json  sendToMultiWallets.sh  setEnvironment.sh  setEnvironmentMainnet.sh  tx.build  tx.signed  unlockAdaFromScript.sh  utils.sh  wallets.txt
src/BWorksV1/: SimpleToTest.hs  UnlockByBWorksWithDeadLine.hs  UnlockByBWorksWithoutDeadLine.hs  UnlockByEmpWithDeadLine.hs  UnlockByEmpWithoutDeadLine.hs
src/BWorksV2/: BWorksV2AppWallet.hs  UnlockByBWorksWithDeadLine.hs  UnlockByBWorksWithoutDeadLine.hs  UnlockByEmpWithDeadLine.hs  UnlockByEmpWithoutDeadLine.hs
wallets/: simpleTotestScript.addr  unlockByBWorksWithDeadLineScript.addr  wallet01.addr  wallet01.skey  wallet01.vkey
